--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -58,6 +58,9 @@
     <Filter Include="02. GameObject\07. AttackableObj">
       <UniqueIdentifier>{fb822bd7-6e50-41e8-8d72-312b15b14032}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. GameObject\02. Monster\BlueBeatle">
+      <UniqueIdentifier>{a25dd0f4-78ec-480e-9e56-ff3e40d4f76e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Header\MainApp.h">
@@ -119,6 +122,9 @@
     <ClInclude Include="..\Header\InteractiveObj.h">
       <Filter>02. GameObject\06. InteractiveObj</Filter>
     </ClInclude>
+    <ClInclude Include="..\Header\BlueBeatle.h">
+      <Filter>02. GameObject\02. Monster\BlueBeatle</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -171,6 +177,9 @@
     </ClCompile>
     <ClCompile Include="..\Code\InteractiveObj.cpp">
       <Filter>02. GameObject\06. InteractiveObj</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\BlueBeatle.cpp">
+      <Filter>02. GameObject\02. Monster\BlueBeatle</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
