--- a/Framework/Engine/System/Include/System.vcxproj
+++ b/Framework/Engine/System/Include/System.vcxproj
@@ -179,6 +179,7 @@ call CopySystem.bat</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Header\Export_System.h" />
+    <ClInclude Include="..\..\Header\FontMgr.h" />
     <ClInclude Include="..\..\Header\Frame.h" />
     <ClInclude Include="..\..\Header\FrameMgr.h" />
     <ClInclude Include="..\..\Header\GraphicDev.h" />
@@ -190,6 +191,7 @@ call CopySystem.bat</Command>
     <None Include="..\..\Header\Export_System.inl" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\Code\FontMgr.cpp" />
     <ClCompile Include="..\Code\Frame.cpp" />
     <ClCompile Include="..\Code\FrameMgr.cpp" />
     <ClCompile Include="..\Code\GraphicDev.cpp" />
