--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -179,8 +179,12 @@
   <ItemGroup>
     <ClInclude Include="..\Header\AttackableObj.h" />
     <ClInclude Include="..\Header\BackGround.h" />
+    <ClInclude Include="..\Header\BenchObj.h" />
     <ClInclude Include="..\Header\CUI.h" />
-    <ClInclude Include="..\Header\InteractiveObj.h" />
+    <ClInclude Include="..\Header\GrabbableObj.h" />
+    <ClInclude Include="..\Header\NearReactObj.h" />
+    <ClInclude Include="..\Header\OnEventObj.h" />
+    <ClInclude Include="..\Header\PushableObj.h" />
     <ClInclude Include="..\Header\Logo.h" />
     <ClInclude Include="..\Header\MainApp.h" />
     <ClInclude Include="..\Header\Monster.h" />
@@ -208,8 +212,12 @@
   <ItemGroup>
     <ClCompile Include="..\Code\AttackableObj.cpp" />
     <ClCompile Include="..\Code\BackGround.cpp" />
+    <ClCompile Include="..\Code\BenchObj.cpp" />
     <ClCompile Include="..\Code\CUI.cpp" />
-    <ClCompile Include="..\Code\InteractiveObj.cpp" />
+    <ClCompile Include="..\Code\GrabbableObj.cpp" />
+    <ClCompile Include="..\Code\NearReactObj.cpp" />
+    <ClCompile Include="..\Code\OnEventObj.cpp" />
+    <ClCompile Include="..\Code\PushableObj.cpp" />
     <ClCompile Include="..\Code\Logo.cpp" />
     <ClCompile Include="..\Code\MainApp.cpp" />
     <ClCompile Include="..\Code\Monster.cpp" />
