--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -70,6 +70,9 @@
     <Filter Include="02. GameObject\09. EnvironmentObj\00. NearReactObj">
       <UniqueIdentifier>{8a6196fd-5402-4513-8f05-b924c7e1afe7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. GameObject\02. Monster\03. DesertRhino">
+      <UniqueIdentifier>{e08a4cbd-a953-45a6-b35f-2b7c85ae5ac2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Header\MainApp.h">
@@ -144,6 +147,10 @@
       <Filter>02. GameObject\09. EnvironmentObj\00. NearReactObj</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\BlueBeatle.h" />
+    <ClInclude Include="..\Header\TrashBig.h" />
+    <ClInclude Include="..\Header\DesertRhino.h">
+      <Filter>02. GameObject\02. Monster\03. DesertRhino</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -210,6 +217,10 @@
       <Filter>02. GameObject\09. EnvironmentObj\00. NearReactObj</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\BlueBeatle.cpp" />
+    <ClCompile Include="..\Code\TrashBig.cpp" />
+    <ClCompile Include="..\Code\DesertRhino.cpp">
+      <Filter>02. GameObject\02. Monster\03. DesertRhino</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Client.ico">
