--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="..\Header\OnEventObj.h" />
     <ClInclude Include="..\Header\Player_State_BallonFly.h" />
     <ClInclude Include="..\Header\Player_State_Down.h" />
+    <ClInclude Include="..\Header\Player_State_Drawing.h" />
     <ClInclude Include="..\Header\Player_State_GameOver.h" />
     <ClInclude Include="..\Header\Player_State_GetItem.h" />
     <ClInclude Include="..\Header\PushableObj.h" />
@@ -226,6 +227,7 @@
     <ClCompile Include="..\Code\OnEventObj.cpp" />
     <ClCompile Include="..\Code\Player_State_BallonFly.cpp" />
     <ClCompile Include="..\Code\Player_State_Down.cpp" />
+    <ClCompile Include="..\Code\Player_State_Drawing.cpp" />
     <ClCompile Include="..\Code\Player_State_GameOver.cpp" />
     <ClCompile Include="..\Code\Player_State_GetItem.cpp" />
     <ClCompile Include="..\Code\PushableObj.cpp" />
