--- a/Framework/Engine/Utility/Include/Utility.vcxproj
+++ b/Framework/Engine/Utility/Include/Utility.vcxproj
@@ -186,6 +186,7 @@ call CopyUtility.bat</Command>
     <ClInclude Include="..\..\Header\Collider.h" />
     <ClInclude Include="..\..\Header\CollisionMgr.h" />
     <ClInclude Include="..\..\Header\Component.h" />
+    <ClInclude Include="..\..\Header\EventMgr.h" />
     <ClInclude Include="..\..\Header\Export_Utility.h" />
     <ClInclude Include="..\..\Header\GameObject.h" />
     <ClInclude Include="..\..\Header\KeyMgr.h" />
@@ -215,6 +216,7 @@ call CopyUtility.bat</Command>
     <ClCompile Include="..\Code\Collider.cpp" />
     <ClCompile Include="..\Code\CollisionMgr.cpp" />
     <ClCompile Include="..\Code\Component.cpp" />
+    <ClCompile Include="..\Code\EventMgr.cpp" />
     <ClCompile Include="..\Code\GameObject.cpp" />
     <ClCompile Include="..\Code\KeyMgr.cpp" />
     <ClCompile Include="..\Code\Layer.cpp" />
