--- a/Framework/Engine/Utility/Include/Utility.vcxproj.filters
+++ b/Framework/Engine/Utility/Include/Utility.vcxproj.filters
@@ -88,6 +88,9 @@
     <Filter Include="05. Component\05. RigidBody">
       <UniqueIdentifier>{89a82244-198a-4d7f-9cce-0b9e7fd95c49}</UniqueIdentifier>
     </Filter>
+    <Filter Include="00. Manager\06. EventMgr">
+      <UniqueIdentifier>{238b1654-e1ab-402f-9f3d-41e29a8b9cd1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Header\Scene.h">
@@ -171,6 +174,9 @@
     <ClInclude Include="..\..\Header\RigidBody.h">
       <Filter>05. Component\05. RigidBody</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Header\EventMgr.h">
+      <Filter>00. Manager\06. EventMgr</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\Scene.cpp">
@@ -250,6 +256,9 @@
     </ClCompile>
     <ClCompile Include="..\Code\RigidBody.cpp">
       <Filter>05. Component\05. RigidBody</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\EventMgr.cpp">
+      <Filter>00. Manager\06. EventMgr</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
